--- a/sdl/install.txt
+++ b/sdl/install.txt
@@ -2,5 +2,6 @@ Build with Linux:
 #################
 
 sudo apt-get install libpng-dev libsdl1.2-dev libmad0-dev libsdl-gfx1.2-dev
+sudo apt-get install libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev
 make
 ./ballion
